--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "mysql2": "^2.3.2",
     "rotating-file-stream": "^2.1.6",
     "sequelize": "^6.8.0",
+    "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.2"
-  }
+  },
+  "devDependencies": {}
 }
