--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
+    "numeral": "^2.0.6",
     "rotating-file-stream": "^2.1.6",
     "sequelize": "^6.8.0",
     "sequelize-cli": "^6.2.0",
