--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-errors": "^1.8.0",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
