--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "numeral": "^2.0.6",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "rotating-file-stream": "^2.1.6",
     "sequelize": "^6.8.0",
     "sequelize-cli": "^6.2.0",
