--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.2.1",
+    "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
