--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-lint": "^1.2.1",
-    "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
+    "html-escaper": "^3.0.3",
     "http-errors": "^1.8.0",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
