--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,18 @@
   // 기존 특성에 대한 설명을 보려면 가리킵니다.
   // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
   "version": "0.2.0",
-  	"configurations": [
-		{
-			"command": "npm run serve",
-			"name": "Run Backend",
-			"request": "launch",
-			"type": "node-terminal"
-		}
-	]
+  "configurations": [
+    {
+      "command": "cross-env NODE_ENV=development nodemon app",
+      "name": "Run npm start",
+      "request": "launch",
+      "type": "node-terminal"
+    },
+    {
+      "command": "npm run serve",
+      "name": "Run Backend",
+      "request": "launch",
+      "type": "node-terminal"
+    }
+  ]
 }
