--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rotating-file-stream": "^2.1.6",
     "sequelize": "^6.8.0",
     "sequelize-cli": "^6.2.0",
+    "sharp": "^0.29.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {}
