--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.2",
+    "nodemailer-smtp-pool": "^2.8.3",
     "numeral": "^2.0.6",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
